--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ function play2(clicked_id){
     document.getElementById(id1).disabled = true;
     ///Block Overwrite
     document.getElementById(id1).setAttribute("onclick", null)
-    document.getElementById(id).setAttribute("class", "cube cd")
+    document.getElementById(id1).setAttribute("class", "cube cd")
 
 } 
     </script>
